# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md
.github/workflows/: cicd.yml
banking/: CMakeLists.txt
tests/: CMakeLists.txt  TEST.cpp
